[gd_scene load_steps=4 format=3]

[ext_resource type="Theme" path="res://themes/rpg_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/3d/city/city_menu.gd" id="2_script"]
[ext_resource type="Script" path="res://scripts/2d/components/menu_list.gd" id="3_menu"]

[node name="CityMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="DimBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="CenterPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="CenterPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.165, 0.227, 0.353, 1)
theme_override_font_sizes/font_size = 18
text = "MENU"
horizontal_alignment = 1

[node name="MenuList" type="VBoxContainer" parent="CenterPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_menu")

[node name="FeedbackLabel" type="Label" parent="CenterPanel/VBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.125, 0.125, 0.125, 1)
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.816, 0.847, 0.878, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
